Add info about device motion.

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
         <![endif]-->
 
         <div id="main-region" class="container"></div>
+        <div id="info-region"></div>
 
         <!-- build:js scripts/main.js -->
         <script src="bower_components/swiper/dist/idangerous.swiper.js"></script>
