Trigger vote after 3 consecutive shakes.

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,9 @@
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
+        <!--
         <script src="dtm/satelliteLib.js"></script>
+        -->
         <!-- build:js scripts/vendor/modernizr.js -->
         <script src="bower_components/modernizr/modernizr.js"></script>
         <!-- endbuild -->
@@ -46,6 +48,7 @@
 
         <div id="main-region" class="container"></div>
         <div id="info-region"></div>
+        <div id="counter-region"></div>
 
         <!-- build:js scripts/main.js -->
         <script src="bower_components/swiper/dist/idangerous.swiper.js"></script>
