Add preloader and sound on result.

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,12 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div id="main-region" class="container"></div>
+        <div id="main-region" class="container">
+          <div class="text-center preloader">
+            <img src="images/loader.gif" width="128" height="128">
+            <h3>Loading...</h3>
+          </div>
+        </div>
         <div id="info-region"></div>
         <div id="counter-region"></div>
 
